# perseus

./: README.md  aes.py  backend_favom.py  backend_mv.py  backend_vmsi.py  backends.py  chi.py  circuit_aes.py  gadget.py  gadget_graph.py  gates.py  graph_inequality.py  proba_sim_ie.py  pyproject.toml  rp_args.py  sanity_check_gadgets.py  sp_line_pool.py  utils.py
rbackend/: Cargo.toml  pyproject.toml
rbackend/src/: favom.rs  lib.rs  progress_bar.rs
rbackend/src/favom/: expr.rs  state.rs  utils.rs
