[package]
name = "rbackend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rbackend"
crate-type = ["cdylib"]

[dependencies]
hytra = "0.1.2"
index_vec = "0.1.4"
indicatif = "0.18.0"
numpy = "0.25.0"
pyo3 = "0.25.0"
rand = "0.9.2"
rand_distr = "0.5.1"
rand_pcg = "0.9.0"
rayon = "1.11.0"
smallvec = { version = "1.15.1", features = ["union"] }
ndarray = "0.16.1"

[profile.release]
debug = true
#opt-level = 0
